# bb-autoscaler

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum  go_dependencies.bzl
.aspect/workflows/: config.yaml
.github/workflows/: master.yaml  pull-requests.yaml
cmd/bb_asg_lifecycle_hook/: BUILD.bazel  main.go
cmd/bb_autoscaler/: BUILD.bazel  main.go
internal/mock/: BUILD.bazel
pkg/autoscaler/: BUILD.bazel  size_class_queue_key.go  size_class_queue_key_test.go
pkg/cloud/aws/: BUILD.bazel  build_queue_lifecycle_hook_handler.go  build_queue_lifecycle_hook_handler_test.go  lifecycle_hook_sqs_message_handler_test.go  sqs_receiver.go  sqs_receiver_test.go
pkg/proto/configuration/bb_asg_lifecycle_hook/: BUILD.bazel  bb_asg_lifecycle_hook.pb.go  bb_asg_lifecycle_hook.proto
pkg/proto/configuration/bb_autoscaler/: BUILD.bazel  bb_autoscaler.pb.go  bb_autoscaler.proto
tools/: BUILD.bazel
tools/github_workflows/: github_workflows.jsonnet
