load("@com_github_buildbarn_bb_storage//tools:container.bzl", "container_push_official", "multiarch_go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bb_asg_lifecycle_hook_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-autoscaler/cmd/bb_asg_lifecycle_hook",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cloud/aws",
        "//pkg/proto/configuration/bb_asg_lifecycle_hook",
        "@com_github_aws_aws_sdk_go_v2_service_autoscaling//:autoscaling",
        "@com_github_aws_aws_sdk_go_v2_service_sqs//:sqs",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/buildqueuestate",
        "@com_github_buildbarn_bb_storage//pkg/cloud/aws",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "bb_asg_lifecycle_hook",
    embed = [":bb_asg_lifecycle_hook_lib"],
    visibility = ["//visibility:public"],
)

multiarch_go_image(
    name = "bb_asg_lifecycle_hook_container",
    binary = ":bb_asg_lifecycle_hook",
)

container_push_official(
    name = "bb_asg_lifecycle_hook_container_push",
    component = "bb-asg-lifecycle-hook",
    image = ":bb_asg_lifecycle_hook_container",
)
