load("@com_github_buildbarn_bb_storage//tools:container.bzl", "container_push_official")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bb_autoscaler_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-autoscaler/cmd/bb_autoscaler",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/proto/configuration/bb_autoscaler",
        "@com_github_aws_aws_sdk_go_v2_service_autoscaling//:autoscaling",
        "@com_github_aws_aws_sdk_go_v2_service_eks//:eks",
        "@com_github_aws_aws_sdk_go_v2_service_eks//types",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_storage//pkg/cloud/aws",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_prometheus_client_golang//api",
        "@com_github_prometheus_client_golang//api/prometheus/v1:prometheus",
        "@com_github_prometheus_common//model",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//encoding/prototext",
    ],
)

go_binary(
    name = "bb_autoscaler",
    embed = [":bb_autoscaler_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image(
    name = "bb_autoscaler_container",
    embed = [":bb_autoscaler_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

container_push_official(
    name = "bb_autoscaler_container_push",
    component = "bb-autoscaler",
    image = ":bb_autoscaler_container",
)
