load("@com_github_buildbarn_bb_storage//tools:container.bzl", "container_push_official", "multiarch_go_image")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bb_autoscaler_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-autoscaler/cmd/bb_autoscaler",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/autoscaler",
        "//pkg/proto/configuration/bb_autoscaler",
        "@com_github_aws_aws_sdk_go_v2_service_autoscaling//:autoscaling",
        "@com_github_aws_aws_sdk_go_v2_service_eks//:eks",
        "@com_github_aws_aws_sdk_go_v2_service_eks//types",
        "@com_github_buildbarn_bb_storage//pkg/cloud/aws",
        "@com_github_buildbarn_bb_storage//pkg/http",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_prometheus_client_golang//api",
        "@com_github_prometheus_client_golang//api/prometheus/v1:prometheus",
        "@com_github_prometheus_common//model",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//applyconfigurations/apps/v1:apps",
        "@io_k8s_client_go//applyconfigurations/meta/v1:meta",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)

go_binary(
    name = "bb_autoscaler",
    embed = [":bb_autoscaler_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

multiarch_go_image(
    name = "bb_autoscaler_container",
    binary = ":bb_autoscaler",
)

container_push_official(
    name = "bb_autoscaler_container_push",
    component = "bb-autoscaler",
    image = ":bb_autoscaler_container",
)
