load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "aws",
    srcs = [
        "build_queue_lifecycle_hook_handler.go",
        "lifecycle_hook_sqs_message_handler.go",
        "sqs_receiver.go",
    ],
    importpath = "github.com/buildbarn/bb-autoscaler/pkg/cloud/aws",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_service_autoscaling//:autoscaling",
        "@com_github_aws_aws_sdk_go_v2_service_sqs//:sqs",
        "@com_github_aws_smithy_go//:smithy-go",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/buildqueuestate",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_prometheus_client_golang//prometheus",
        "@org_golang_google_grpc//codes",
    ],
)

go_test(
    name = "aws_test",
    srcs = [
        "build_queue_lifecycle_hook_handler_test.go",
        "lifecycle_hook_sqs_message_handler_test.go",
        "sqs_receiver_test.go",
    ],
    deps = [
        ":aws",
        "//internal/mock",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_service_autoscaling//:autoscaling",
        "@com_github_aws_aws_sdk_go_v2_service_sqs//:sqs",
        "@com_github_aws_aws_sdk_go_v2_service_sqs//types",
        "@com_github_aws_smithy_go//:smithy-go",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/buildqueuestate",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_uber_go_mock//gomock",
    ],
)
