load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "bb_autoscaler_proto",
    srcs = ["bb_autoscaler.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/cloud/aws:aws_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/http/client:client_proto",
    ],
)

go_proto_library(
    name = "bb_autoscaler_go_proto",
    importpath = "github.com/buildbarn/bb-autoscaler/pkg/proto/configuration/bb_autoscaler",
    proto = ":bb_autoscaler_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/cloud/aws",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/http/client",
    ],
)

go_library(
    name = "bb_autoscaler",
    embed = [":bb_autoscaler_go_proto"],
    importpath = "github.com/buildbarn/bb-autoscaler/pkg/proto/configuration/bb_autoscaler",
    visibility = ["//visibility:public"],
)
